# HLSProxy

./: .gitignore  CMakeLists.txt  README.md
ex1/include/: client.h  proxy.h  url.h
ex1/src/: client.cpp  proxy.cpp  url.cpp
ex2/include/: client.h  manifest.h  manifest_parser.h  proxy.h
ex2/src/: client.cpp  main.cpp  manifest.cpp  manifest_parser.cpp  proxy.cpp  url.cpp
ex3/include/: client.h  manifest.h  manifest_parser.h  proxy.h  proxy_config.h
ex3/src/: client.cpp  manifest.cpp  manifest_parser.cpp  proxy.cpp
